--- a/code/1_Preliminaries.ipynb
+++ b/code/1_Preliminaries.ipynb
@@ -197,14 +197,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['a', 'person', 'doing', 'a', 'trick', 'on', 'a', 'rail', 'while', 'riding', 'a', 'skateboard', '.']\n"
+     "ename": "NameError",
+     "evalue": "name 'sample_caption' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-fbf58bcb9e1e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0msample_tokens\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokenize\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mword_tokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_caption\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_tokens\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sample_caption' is not defined"
      ]
     }
    ],
@@ -565,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -573,23 +577,22 @@
      "output_type": "stream",
      "text": [
       "Vocabulary successfully loaded from vocab.pkl file!\n",
-      "loading annotations into memory...\n"
+      "loading annotations into memory...\n",
+      "Done (t=1.79s)\n",
+      "creating index...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  0%|          | 0/414113 [00:00<?, ?it/s]"
+      "  0%|          | 693/414113 [00:00<00:59, 6928.54it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done (t=0.52s)\n",
-      "creating index...\n",
       "index created!\n",
       "Obtaining caption lengths...\n"
      ]
@@ -598,11 +601,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 414113/414113 [00:52<00:00, 7859.40it/s]\n"
+      "100%|██████████| 414113/414113 [00:51<00:00, 8009.64it/s] \n"
      ]
     }
    ],
    "source": [
+    "import torch\n",
+    "from data_loader import get_loader\n",
+    "from torchvision import transforms\n",
+    "\n",
+    "# Define a transform to pre-process the training images.\n",
+    "transform_train = transforms.Compose([ \n",
+    "    transforms.Resize((256, 256)),                          # smaller edge of image resized to 256\n",
+    "    #transforms.RandomCrop(224),                      # get 224x224 crop from random location\n",
+    "    #transforms.RandomHorizontalFlip(),               # horizontally flip image with probability=0.5\n",
+    "    transforms.ToTensor(),                           # convert the PIL Image to a tensor\n",
+    "    transforms.Normalize((0.485, 0.456, 0.406),      # normalize image for pre-trained model\n",
+    "                         (0.229, 0.224, 0.225))])\n",
+    "batch_size=10\n",
+    "\n",
     "# Obtain the data loader (from file). Note that it runs much faster than before!\n",
     "data_loader = get_loader(transform=transform_train,\n",
     "                         mode='train',\n",
@@ -624,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -709,16 +726,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 sampled indices: [75878, 369770, 186421, 188146, 221095, 88040, 129221, 354951, 273899, 218390]\n",
-      "images.shape: torch.Size([10, 3, 224, 224])\n",
-      "Caption gloves shape: torch.Size([10, 12, 300])\n"
+      "10 sampled indices: [1773, 334136, 259086, 222815, 342240, 302946, 666, 396277, 120882, 350575]\n",
+      "images.shape: torch.Size([10, 3, 256, 256])\n",
+      "Caption gloves shape: torch.Size([10, 13, 300])\n"
      ]
     }
    ],
@@ -736,52 +753,33 @@
     "# Obtain the batch.\n",
     "for batch in data_loader:\n",
     "    images, caption_gloves = batch[0], batch[1]\n",
-    "    break\n",
+    "    print('images.shape:', images.shape)\n",
+    "    print(\"Caption gloves shape:\", caption_gloves.shape)\n",
     "    \n",
-    "\n",
-    "\n",
     "# Print the pre-processed images and captions.\n",
-    "print('images.shape:', images.shape)\n",
+    "#print('images.shape:', images.shape)\n",
     "#print('images:', images)\n",
-    "print(\"Caption gloves shape:\", caption_gloves.shape)\n"
+    "#print(\"Caption gloves shape:\", caption_gloves.shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "caption = ['<start>', 'watch', 'a', 'Shashank', '<end>']\n",
-    "unk_word=\"<unk>\"\n",
-    "p = [data_loader.dataset.vocab_glove[word] if word in data_loader.dataset.vocab_glove.keys() else data_loader.dataset.vocab_glove[unk_word] for word in caption]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "<torch.utils.data.dataloader.DataLoader at 0x7f4924554278>"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "50000 in p"
+    "data_loader"
    ]
   },
   {
@@ -923,6 +921,120 @@
     "# Check that our decoder satisfies some requirements of the project!\n",
     "assert (outputs.shape[0]==batch_size) & (outputs.shape[1]==captions.shape[1]) & (outputs.shape[2]==vocab_size), \"The shape of the decoder output is incorrect.\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocabulary successfully loaded from vocab.pkl file!\n",
+      "loading annotations into memory...\n",
+      "Done (t=0.50s)\n",
+      "creating index...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 847/414113 [00:00<00:48, 8468.29it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index created!\n",
+      "Obtaining caption lengths...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 414113/414113 [00:47<00:00, 8679.43it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "images.shape: torch.Size([10, 3, 224, 224])\n",
+      "Caption gloves shape: torch.Size([10, 27, 300])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from data_loader import get_loader\n",
+    "from torchvision import transforms\n",
+    "import numpy as np\n",
+    "import torch.utils.data as data\n",
+    "'''\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize(224),  # smaller edge of image resized to 256\n",
+    "    transforms.ToTensor(),  # convert the PIL Image to a tensor\n",
+    "    transforms.Normalize((0.485, 0.456, 0.406),  # normalize image for pre-trained model\n",
+    "                         (0.229, 0.224, 0.225))])\n",
+    "'''\n",
+    "transform = transforms.Compose([ \n",
+    "    transforms.Resize((224, 224)),                          # smaller edge of image resized to 256\n",
+    "    #transforms.RandomCrop(224),                      # get 224x224 crop from random location\n",
+    "    #transforms.RandomHorizontalFlip(),               # horizontally flip image with probability=0.5\n",
+    "    transforms.ToTensor(),                           # convert the PIL Image to a tensor\n",
+    "    transforms.Normalize((0.485, 0.456, 0.406),      # normalize image for pre-trained model\n",
+    "                         (0.229, 0.224, 0.225))])\n",
+    "\n",
+    "# Obtain the data loader (from file). Note that it runs much faster than before!\n",
+    "data_loader = get_loader(transform=transform,\n",
+    "                         mode='train',\n",
+    "                         batch_size=10,\n",
+    "                         vocab_from_file=True)\n",
+    "\n",
+    "# Obtain the batch.\n",
+    "for batch in data_loader:\n",
+    "    images, caption_gloves = batch[0], batch[1]\n",
+    "    break\n",
+    "    \n",
+    "# Print the pre-processed images and captions.\n",
+    "print('images.shape:', images.shape)\n",
+    "#print('images:', images)\n",
+    "print(\"Caption gloves shape:\", caption_gloves.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 8],\n",
+       "       [3, 4]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where([[True, False], [True, True]],\n",
+    "         [[1, 2], [3, 4]],\n",
+    "         [[9, 8], [7, 6]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
