Image Caption Retrieval on Flickr30k Test Set

--- a/code/Image_Caption_Retrieval_on_MSCOCOValSet.ipynb
+++ b/code/Image_Caption_Retrieval_on_MSCOCOValSet.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from torchvision import transforms\n",
@@ -31,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -145,12 +136,12 @@
       "Loaded checkpoint 'npairs_loss_model.tar' (epoch 34)\n",
       "Vocabulary successfully loaded from vocab.pkl file!\n",
       "loading annotations into memory...\n",
-      "Done (t=0.81s)\n",
+      "Done (t=0.82s)\n",
       "creating index...\n",
       "index created!\n",
       "Sanity Check ---> Size of the selected test Image Tensor torch.Size([1, 10, 3, 224, 224])\n",
-      "Sanity Check ---> Size of the selected test Glove-Caption Tensor torch.Size([1, 49, 22, 300])\n",
-      "Sanity Check ---> Size of the output tensor from LSTM  torch.Size([49, 22, 1024])\n",
+      "Sanity Check ---> Size of the selected test Glove-Caption Tensor torch.Size([1, 50, 22, 300])\n",
+      "Sanity Check ---> Size of the output tensor from LSTM  torch.Size([50, 22, 1024])\n",
       "Sanity Check ---> Size of the output tensor from Image Model  torch.Size([10, 1024, 14, 14])\n"
      ]
     }
@@ -179,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -201,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +221,7 @@
      "text": [
       "**********************************\n",
       "The Recall Scores are:\n",
-      "{'C_r1': 0.8, 'C_r5': 0.65, 'C_r10': 0.9400000000000001, 'I_r1': 0.8, 'I_r5': 0.9795918367346939, 'I_r10': 1.0}\n",
+      "{'C_r1': 1.0, 'C_r5': 1.0, 'C_r10': 1.0, 'I_r1': 0.82, 'I_r5': 0.98, 'I_r10': 1.0}\n",
       "**********************************\n"
      ]
     }
@@ -244,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,6 +315,36 @@
     "    print (k,\": \",finalcaptions5k[captid][0])\n",
     "    k=k+1\n",
     "print (\"**************************************************\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [2, 4 ,1]\n",
+    "b = [3, 12, 34, 45 ,67 , 22, 90, 998, 120, 123]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 4}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(a)-set(b)"
    ]
   },
   {
